--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "tailwindcss": "^3.4.13",
     "typescript": "^4.7.4",
     "vite": "^3.0.4"
+  },
+  "dependencies": {
+    "vite-plugin-pwa": "^0.20.5"
   }
 }
